# repotalk

./: .gitignore  LICENSE  README.md  config.example.yaml  ecosystem.config.cjs  pyproject.toml  repotalk.db-shm  repotalk.db-wal
docs/: PRD.md
docs/diagrams/: architecture.mmd  auto-update.mmd  data-model.mmd  fix-flow.mmd  pipeline.mmd  pyramid.mmd
prompts/: chat_system.md  file_doc.md  graph_enrich.md  rollup.md
repotalk/: __init__.py  analyzer.py  chat.py  cli.py  config.py  crawler.py  documenter.py  embedder.py  graph.py  llm_client.py  models.py  output.py  retriever.py  rollup.py
salt_doc_gen/: __init__.py  analyzer.py  chat.py  cli.py  config.py  crawler.py  documenter.py  embedder.py  graph.py  llm_client.py  models.py  output.py  retriever.py  rollup.py
server/: __init__.py  auth.py  database.py  dependencies.py  main.py  models_db.py  schemas.py
server/routes/: agents.py  annotations.py  chat.py  context.py  docs.py  files.py  graph.py  projects.py  settings.py  users.py  webhooks.py
server/services/: agent_service.py  chat_service.py  graph_service.py  indexing.py  watcher.py
static/: app.css  app.js  index.html
web/: components.json  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/api/: client.ts  sse.ts  types.ts
web/src/components/chat/: ActionButtons.tsx  ChatInput.tsx  ChatMessage.tsx  ChatPanel.tsx  MessageList.tsx  StreamingMessage.tsx  SuggestedQuestions.tsx
web/src/components/context/: ContextPanel.tsx  DependencyView.tsx  DocsTree.tsx  ExamplesView.tsx  GraphView.tsx  SourceView.tsx
web/src/components/graph/: GraphCanvas.tsx  GraphControls.tsx  GraphLegend.tsx  GraphTooltip.tsx
web/src/components/layout/: ResizablePanes.tsx  StatusBar.tsx  TopBar.tsx
web/src/components/settings/: AgentConfig.tsx  ApiKeysConfig.tsx  ModelsConfig.tsx  UpdateConfig.tsx  UsageDashboard.tsx
web/src/components/shared/: CodeBlock.tsx  FileIcon.tsx  MarkdownRenderer.tsx
web/src/hooks/: useChat.ts  useGraph.ts  useProject.ts  useSSE.ts
web/src/lib/: constants.ts  graphLayout.ts
web/src/pages/: Dashboard.tsx  ProjectView.tsx  Settings.tsx
web/src/stores/: chatStore.ts  graphStore.ts  projectStore.ts  uiStore.ts
