[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "repotalk"
version = "0.1.0"
description = "AI-powered codebase documentation generator with knowledge graph and RAG chat"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "SALT", email = "salt@example.com" },
]
keywords = ["documentation", "code-analysis", "llm", "knowledge-graph", "rag"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "click>=8.1",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "litellm>=1.40",
    "networkx>=3.0",
    "rich>=13.0",
    "tenacity>=8.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.19",
    "asyncpg>=0.29",
    "watchdog>=4.0",
]
vector = ["chromadb>=0.4"]
all = ["chromadb>=0.4", "repotalk[server]"]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.4",
]

[project.scripts]
repotalk = "repotalk.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["repotalk", "server"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
